change in web value for form hidden input

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <form id="contactForm" method="POST" class="mx-auto" style="max-width:600px;">
       <input type="hidden" name="_subject" value="New message from neX landing page">
       <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value="https://tusitio.github.io/thanks.html">
+      <input type="hidden" name="_next" value="https://martinmoran.github.io/VR_neX/">
 
       <div class="mb-3">
         <input type="text" name="name" class="form-control" placeholder="Your Name" required>
