--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="container">
     <!-- Logo a la izquierda -->
     <a class="navbar-brand" href="#">
-      <img src="assets/nex.jpg" alt="Tribe Logo" style="height: 75px;">
+      <img src="Assets/nex.jpg" alt="Tribe Logo" style="height: 75px;">
     </a>
 
     <!-- Hamburguer menu mobile -->
